LPS-60972 Remove Liferay-specific test JVM args from script